# CG_2

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
Algebra/: Matriz_2.inl  Matriz_3.inl  Matriz_4.inl  Operacoes.h  Vec_2.h  Vec_2.inl  Vec_3.h  Vec_3.inl  Vec_4.h  Vec_4.inl  algebra_vetor.h  algebra_vetor.inl  include_algebra.h  main  main.cpp  matriz_enum.h
camera/: Camera.h  Canvas.h
engines/: Engine_OpenGl.cpp  Engine_OpenGl.h
leitor_imagem/: Leitor_imagem.cpp  Leitor_imagem.h
objetos/: Cone.h  Esfera.h  Face.h  Luz.h  Luz_cone.h  Luz_pontual.h  Mundo.h  Objeto.h
shaders/: shader.vs
